--- a/source/blender/vr/CMakeLists.txt
+++ b/source/blender/vr/CMakeLists.txt
@@ -60,6 +60,7 @@ set(INC_SYS
 set(SRC
     intern/vr_vr.cpp
     intern/vr_math.cpp
+    intern/vr_draw_cache.c
     intern/vr_ui_manager.cpp
     intern/vr_oculus.cpp
 
@@ -70,6 +71,7 @@ set(SRC
     intern/vr_types.h
     intern/vr_math.h
     intern/vr_utils.h
+    intern/vr_draw_cache.h
     intern/vr_ui_manager.h
     intern/vr_oculus.h
 )
