- Hide and Show UI with right Thumb - Modify brush size and strength with Thumbstick. - Refactor

--- a/source/blender/vr/CMakeLists.txt
+++ b/source/blender/vr/CMakeLists.txt
@@ -72,6 +72,7 @@ set(SRC
     vr_vr.h
     
     intern/vr_types.h
+    intern/vr_event.h
     intern/vr_math.h
     intern/vr_utils.h
     intern/vr_draw_cache.h
